# Euler

./: CMakeLists.txt  README.md  run_build.cmd  run_euler.cmd
include/: helperFunctions.h
scripts/: addScript.eu  file copy.eulr  file.eulr
src/: ast.h  helperFunctions.cpp  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
